# Convin-Assignment

./: pyproject.toml
django_project/: settings.py  urls.py  views.py
